[workspace]
members = ["minimum-rusqlite", "poem-store"]
resolver = "2"

[workspace.package]
version = "0.2.1"
authors = ["冰龍與雪風的工作室 <57035251+SetsuikiHyoryu@users.noreply.github.com>"]
edition = "2021"
description = "使用 Rust 操作 SQLite。"
readme = "README.md"
homepage = "https://setsuikihyoryu.github.io"
repository = "https://github.com/SetsuikiHyoryu/rust_sqlite_sample"
license = "MIT"
keywords = ["SQLite", "Rusqlite", "Toxio", "clap", "SQLx"]

