[package]
name = "minimum-rusqlite"
version = "0.1.3"
authors.workspace = true
edition.workspace = true
description = "最小 Rusqlite 应用。"
readme = "README.md"
homepage.workspace = true
repository = "https://github.com/SetsuikiHyoryu/rust_sqlite_sample"
license.workspace = true
keywords = ["Rusqlite", "minimum", "SQLite"]

[dependencies]
rusqlite = { version = "0.30.0", features = ["bundled"] }
